<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ValgoodChat</string>
    <string name="login_activity_label">Sinch Social</string>
    <string name="login">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="password_confirmacion">Confirmar Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="salir">Salir</string>
    <string name="salir_msj">¿Esta seguro que desea salir de la aplicacion?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="llamar">Llamar</string>
    <string name="sms">SMS</string>
    <string name="usuarios">Usuarios</string>
    <string name="numero_telefono">Nùmero de Telefono:</string>
    <string name="message_elipses">Message...</string>
    <string name="forget_password">¿Olvidó su Contraseña?</string>
    <string name="label_login">LOGIN</string>
    <string name="label_register">REGISTRO</string>
    <string name="button_login">Entrar</string>
    <string name="button_register">Registrar</string>
    <string name="chat">Chats</string>
    <string name="user_name">Nombres</string>
    <string name="user_lastname">Apellidos</string>
    <string name="user_phone">+(codP)(codC)(numero)</string>
    <string name="call_hang_up">Colgar</string>
    <string name="call_pick_up">Atender</string>
    <string name="call_reject">Rechazar</string>
    <string name="call_speakers">Altavoz</string>
    <string name="error_title">Error</string>
    <string name="accept">Aceptar</string>
    <string name="pick_image">Seleccione una Imagen</string>
    <string name="option_take_photo">Tomar Fotografia</string>
    <string name="option_gallery">Seleccionar de Galeria</string>
    <string name="select_photo_source">Seleccionar Origen</string>
    <string name="photo_directory">SocialSinch</string>
    <string name="profile_picture_name">socialsinch_picture.jpeg</string>
    <string name="loading">Cargando</string>
    <string name="loading_msj">Estableciendo conexion...</string>
    <string name="error_save_picture_msj">Error al Guardar Imagen de Perfil:</string>
    <string name="error_login_msj">Error al Iniciar Sesion:</string>
    <string name="error_sign_up_msj">Error al Realizar Registro:</string>
    <string name="success">Exito</string>
    <string name="success_registered">Registro Exitoso!</string>
    <string name="title_activity_tab">Sinch Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="getting_users">Fetching your Contacts</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="invalid_email">Email Invalid</string>
    <string name="invalid_password">Password must be at least 6 Characters</string>
    <string name="type_your_message">Type a message</string>
    <string name="last_time_seen">last time seen</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="at">at</string>
    <string name="status_online">Online</string>
    <string name="gif_galley_title">GIF Gallery</string>
    <string name="search_title">Search</string>
    <string name="sign_in_label">Sign In</string>
    <string name="sign_up_label">Sign Up</string>
    <plurals name="single_user_new_messages_received_label">
        <item quantity="one">%1$d new Message</item>
        <item quantity="other">%1$d new Messages</item>
    </plurals>
    <string name="multiple_user_new_messages_received_label">%1$d Conversations %2$d new Messages</string>
</resources>
