<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:socialsinch="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyish"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.parse.sinch.social.LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/caja_registro"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/labelLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_register"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold" />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <com.makeramen.RoundedImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/userpicture"
            android:scaleType="centerCrop"
            socialsinch:riv_corner_radius="150dip"/>
        </LinearLayout>

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_action_person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/user_name" >

            <requestFocus />
        </EditText>

       <EditText
            android:id="@+id/editUSer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_action_person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/login" />
                
        <EditText
            android:id="@+id/editUserLastname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_action_person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/user_lastname" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_action_accounts"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editConfPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_action_accounts"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password_confirmacion"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editUserPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/ic_action_call"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/user_phone"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/boton"
            android:src="@drawable/boton"
            android:text="@string/button_register"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        
    </LinearLayout>
    
</RelativeLayout>
</ScrollView>